[package]
name = "TemporaryBox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version ="1.20.0", features = ["full"] }
rust-s3="0.32.3"
aws-region = "0.25.1"
aws-creds = "0.34.0"
sqlx = {version="0.6.2",features = [ "runtime-tokio-native-tls" , "postgres","all-types","macros" ]}
# 时间
chrono = {version = "0.4.23",features=["serde"]}
# 序列化
serde = {version = "1.0.147",features=["derive"]}
serde_json = "1.0.88"
#随机数生成
nanoid="0.4.0"

actix-rt = "2.7.0"
actix-web = "4.2.1"
actix-cors = "0.6.4"